Manifest Files/Ingress/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: main-svc
spec:
  ports:
    - name: main
      port: 80
  selector:
    app: main-ecom

---
apiVersion: v1
kind: Service
metadata:
  name: identity-svc
spec:
  ports:
    - name: identity
      port: 80
  selector:
    app: identity-ecom

---
apiVersion: v1
kind: Service
metadata:
  name: catalog-svc
spec:
  ports:
    - name: catalog
      port: 80
  selector:
    app: catalog-ecom

---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  ports:
    - name: order
      port: 80
  selector:
    app: order-ecom

---
apiVersion: v1
kind: Service
metadata:
  name: service-svc
spec:
  ports:
    - name: service
      port: 80
  selector:
    app: service-ecom
