Manifest Files/Ingress/ingress-ecom.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # This YAML configuration defines an Ingress resource for Kubernetes.
          # The Ingress resource is used to manage external access to the services within a Kubernetes cluster.
          # 
          # - path: Specifies the URL path that the Ingress resource will match.
          # - pathType: Defines the type of path matching. In this case, 'Prefix' means that the path will match
          #   any request that starts with the specified path.
          # - backend: Specifies the backend service that will handle the requests matching the path.
          #   - service:
          #     - name: The name of the service that will handle the requests.
          #     - port:
          #       - number: The port on which the service is running.
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-svc
                port:
                  number: 80
          - path: /identity
            pathType: Prefix
            backend:
              service:
                name: identity-svc
                port:
                  number: 80
          - path: /catalog
            pathType: Prefix
            backend:
              service:
                name: catalog-svc
                port:
                  number: 80
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 80
          - path: /service
            pathType: Prefix
            backend:
              service:
                name: service-svc
                port:
                  number: 80
